fix syntax errors for latest JDK