@@ -19,7 +19,8 @@
 import java.io.*;                                         
 import java.net.*;                                        
 import java.util.*;                                       
-import sun.misc.BASE64Decoder;
+// import sun.misc.BASE64Decoder; 
+import java.util.Base64;
 /*This will be used to pause between failed requests*/
 import java.util.concurrent.TimeUnit;
 
@@ -334,7 +335,8 @@ class Credentials {
     private String dUsername;
     private String dPassword;
     public Credentials(String authString) throws Exception {
-	authString = new String((new sun.misc.BASE64Decoder().decodeBuffer(authString)));
+	// authString = new String((new sun.misc.BASE64Decoder().decodeBuffer(authString)));
+	authString = new String((Base64.getDecoder().decode(authString)));
 	StringTokenizer st = new StringTokenizer(authString, ":");
 	dUsername = st.nextToken();
 	dPassword = st.nextToken();
